Criando o iframe principal

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Projeto Social</title>
 </head>
 <body>
-    
+    <main>
+        <iframe src="imagens/frame-iphone.png" frameborder="0"></iframe>
+    </main>
 </body>
 </html>
