--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <main>
-        <iframe src="imagens/frame-iphone.png" frameborder="0"></iframe>
+        <section id="telefone"></section>
+        <section id="redes_sociais"></section>
     </main>
 </body>
 </html>
