--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <main>
-        <section id="telefone"></section>
+        <section id="telefone">
+            <iframe src="paginas-extras/home.html" frameborder="0" name="tela" id="tela"></iframe>
+        </section>
         <section id="redes_sociais"></section>
     </main>
 </body>
