--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <iframe src="paginas-extras/home.html" frameborder="0" name="tela" id="tela"></iframe>
         </section>
         <section id="redes_sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="paginas-extras/home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a><br>
