--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
+            <a href="paginas-extras/youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
         </section>
     </main>
