--- a/paginas-extras/youtube.html
+++ b/paginas-extras/youtube.html
@@ -5,28 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-        }
-        body {
-            width: 100vw;
-            height: 100vh;
-            background-color: black;
-        }
-        img {
-
-        }
-        a {
-
-        }
-    </style>
+    <link rel="stylesheet" href="../estilos/style_pags_estras.css">
     <title>youtube</title>
 </head>
 <body>
     <main>
-        <img src="../imagens/tela-youtube.png" alt="">
+        <img src="../imagens/tela-youtube.png" alt="tela-youtube">
         <a href="https://youtube.com/cursoemvideo" target="_blank">CLIQUE PARA MAIS</a>
     </main>
 </body>
