--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         </section>
         <section id="redes_sociais">
             <a href="paginas-extras/home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a><br>
+            <a href="paginas-extras/github.html" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>
+            <a href="paginas-extras/instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a><br>
+            <a href="paginas-extras/twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a><br>
             <a href="paginas-extras/youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
+            <a href="paginas-extras/facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
         </section>
     </main>
 </body>
