--- a/paginas-extras/github.html
+++ b/paginas-extras/github.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/style_pags_extras.css">
-    <title>Youtube</title>
+    <title>GitHub</title>
 </head>
 <body>
     <main>
-        <img src="../imagens/tela-youtube.png" alt="tela-youtube">
-        <a href="https://youtube.com/cursoemvideo" target="_blank">CLIQUE PARA MAIS</a>
+        <img src="../imagens/tela-github.jpg" alt="tela-github">
+        <a href="https://github.com/davidrodriguex" target="_blank">CLIQUE PARA MAIS</a>
     </main>
 </body>
 </html>
